@startuml CSDL_Nhom2
title Sơ đồ CSDL - Nhóm 2: Đào tạo (Khóa học, Lớp học, Lịch học, Điểm danh)

skinparam linetype ortho
hide circle
skinparam classFontSize 12

entity "khoa_hoc" as khoa_hoc {
  *id : bigint <<PK>>
  --
  ten_khoa : varchar(255)
  mo_ta : text
  loai_bang : enum(A1,A,B1,B2,C1,C,D,E,CE)
  hoc_phi : decimal(12,2)
  so_buoi_ly_thuyet_toi_thieu : int
  so_km_toi_thieu : int
  si_so_toi_da : int
  so_hv_mo_lop : int
  is_active : tinyint(1)
  created_at : timestamp
  updated_at : timestamp
}

entity "lop_hoc" as lop_hoc {
  *id : bigint <<PK>>
  --
  *khoa_hoc_id : bigint <<FK - khoa_hoc>>
  ten_lop : varchar(255)
  giang_vien_ly_thuyet_id : bigint <<FK - giang_vien>>
  giang_vien_thuc_hanh_id : bigint <<FK - giang_vien>>
  ngay_khai_giang : date
  ngay_ket_thuc : date
  si_so_toi_da : int
  trang_thai : enum(chuan_bi, dang_hoc, da_ket_thuc)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "hoc_vien_lop" as hv_lop {
  *id : bigint <<PK>>
  --
  *ho_so_id : bigint <<FK - ho_so_hoc_vien>>
  *lop_hoc_id : bigint <<FK - lop_hoc>>
  ngay_xep_lop : date
  so_buoi_ly_thuyet_da_hoc : int
  so_buoi_thuc_hanh_da_hoc : int
  so_km_da_chay : decimal(8,2)
  du_buoi_ly_thuyet : tinyint(1)
  du_km_thuc_hanh : tinyint(1)
  du_dieu_kien_thi_tn : tinyint(1)
  created_at : timestamp
  updated_at : timestamp
}

entity "lich_hoc" as lich_hoc {
  *id : bigint <<PK>>
  --
  *lop_hoc_id : bigint <<FK - lop_hoc>>
  xe_id : bigint <<FK - xe>>
  ngay_hoc : date
  gio_bat_dau : time
  gio_ket_thuc : time
  loai_buoi : enum(ly_thuyet, thuc_hanh)
  dia_diem : varchar(255)
  noi_dung : text
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "diem_danh" as diem_danh {
  *id : bigint <<PK>>
  --
  *lich_hoc_id : bigint <<FK - lich_hoc>>
  *ho_so_id : bigint <<FK - ho_so_hoc_vien>>
  co_mat : tinyint(1)
  km_chay : decimal(6,2)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "giang_vien" as giang_vien {
  *id : bigint <<PK>>
  --
  *user_id : bigint <<FK - users>>
  chuyen_mon : enum(ly_thuyet, thuc_hanh, ca_hai)
  bang_cap : varchar(255)
  nam_kinh_nghiem : int
}

khoa_hoc ||--o{ lop_hoc : "1 khóa → nhiều lớp"
giang_vien |o--o{ lop_hoc : "dạy lý thuyết"
giang_vien |o--o{ lop_hoc : "dạy thực hành"
lop_hoc ||--o{ hv_lop : "1 lớp → nhiều học viên"
lop_hoc ||--o{ lich_hoc : "1 lớp → nhiều buổi học"
lich_hoc ||--o{ diem_danh : "1 buổi → nhiều điểm danh"

@enduml
